2007-02-22  Jackson Harper  <jackson@ximian.com>

	* TreeNode.cs: When a node is expanded, set its is_expanded flag
	even if it doesn't have any children.

2007-02-22  Jackson Harper  <jackson@ximian.com>

	* TreeView.cs: Calculate the top node 'on the fly', this
	eliminates issues where you need to click on the tree before
	scrolling it to get the top node computed correctly.
	* TreeNodeCollection.cs: We don't need to mess with the top node
	anymore.

2007-02-22  Jackson Harper  <jackson@ximian.com>

	* DataGridViewRow.cs: Fix typo so height can actually be set.
	Patch by Peter Grimm.

2007-02-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileDialog.cs: Fixed support for renaming files and directories.
	* ListView.cs: Do not lose focus when edit is canceled. Process
	Escape as regular key (to prevent closing of dialogs).

2007-02-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* ListView.cs: Removed TODO for LabelEdit. Removed extra tabs and
	spaces. Changed spaces to tabs. Removed unnecessary init of bools.

2007-02-22  Gert Driesen  <drieseng@users.sourceforge.net>

	* FileDialog.cs: LabelEditEventArgs.Label now returns null when user
	did not modify label.
	* ListView.cs: Only set LabelEditEventArgs.Label if user actually
	modified the text. Reset Label when user presses Escape in edit mode.
	Move focus to ListView after having cancelled or finished editing the
	label.

2007-02-21  Gert Driesen  <drieseng@users.sourceforge.net>

	* ComboBox.cs: Removed unnecessary initializations. Marked items field
	private. Clear textbox when Text is set to null and SelectedIndex is
	already -1.
	* FileDialog.cs: Removed unnecessary initializations. Removed 
	workarounds for ComboBox bugs that are now fixed. Modified
	DefaultExt, InitialDirectory and Title property to change null to
	zero-length string in getters. Avoid directly accessing fields.

2007-02-20  Jackson Harper  <jackson@ximian.com>

	* TextControl.cs: Remove RecalAlignments call, that was some