@@ -1,3 +1,8 @@
+2007-02-22  Everaldo Canuto  <everaldo@simios.org>
+
+	* Form.cs: Handle WM_NCHITTEST and return HTMENU when point is on 
+	menu area to fix some problems for non X11 systems. Fixes #80613.
+
 2007-02-22  Jackson Harper  <jackson@ximian.com>
 
 	* TreeNode.cs: When a node is expanded, set its is_expanded flag
